--- a/assets/style.css
+++ b/assets/style.css
@@ -228,7 +228,7 @@ a{
   grid-template-columns: repeat(12,1fr);
 }
 #products.dropped{
-    grid-template-columns: repeat(16,1fr);
+    grid-template-columns: repeat(12,1fr);
 }
 
 #products.dropped .product .main-information {
@@ -241,6 +241,21 @@ a{
 }
 #products.dropped .product .info-product>div:nth-child(even) {
   border-left: 0.5px solid var(--black);
+}
+
+#products.dropped .info-product {
+    border-bottom: 0.5px solid transparent;
+    grid-column: span 1;
+    row-gap: 0px!important;
+    grid-template-columns: repeat(3,1fr);
+    display: grid;
+    grid-gap: 12px;
+}
+#products.dropped .info-product>div:nth-child(even) {
+    border-left: 0.5px solid transparent;
+    grid-column: span 2;
+    padding: 2px 2px 2px 5px;
+    display: grid;
 }
 .product.active-size,
 .product.active-color{
