--- a/assets/style.css
+++ b/assets/style.css
@@ -257,6 +257,10 @@ a{
     padding: 2px 2px 2px 5px;
     display: grid;
 }
+#products.dropped .sold-out {
+    bottom: 0px;
+    width: 100%;
+}
 .product.active-size,
 .product.active-color{
   display: none;
