--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -128,7 +128,7 @@ fernandoepeso.info
     <div class="cart-part">
         <div id="cart">
           <div class="baggie hov">
-              <a {% if template == 'cart' %}  style="color:green;" {% endif %} href="/cart">Cart</a>
+              <a {% if template == 'cart' %}  class="active" {% endif %} href="/cart">Cart</a>
           </div>
           <div class="cart-total">
                 {%- if cart.item_count == 0 -%}
