--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -127,7 +127,7 @@ fernandoepeso.info
     </div>
     <div class="cart-part">
         <div id="cart">
-          <div {% if template == 'cart' %}  class="active" {% endif %} class="baggie hov">
+          <div {% if template == 'cart' %}  class="active baggie hov" {% endif %} class="baggie hov">
               <a href="/cart">Cart</a>
           </div>
           <div class="cart-total">
