--- a/snippets/product-body.liquid
+++ b/snippets/product-body.liquid
@@ -85,7 +85,7 @@
                       <span>{{ product.price_min | money }}</span> – <span>{{ product.price_max | money }}</span>
                     {% else %}
                       {% if product.compare_at_price > product.price %}
-                      <s>{{ product.compare_at_price | money }}</s><span class="red">{{ product.price | money }}</span>
+                      <span><s>{{ product.compare_at_price | money }}</s></span><span class="red">{{ product.price | money }}</span>
                       {% else %}
                     <span>{{ product.price | money }}</span>
 
