--- a/snippets/product-body.liquid
+++ b/snippets/product-body.liquid
@@ -85,7 +85,7 @@
                       <span>{{ product.price_min | money }}</span> – <span>{{ product.price_max | money }}</span>
                     {% else %}
                       {% if product.compare_at_price > product.price %}
-                      {{ product.compare_at_price | money }}</s>{{ product.price | money }}
+                      <s>{{ product.compare_at_price | money }}</s> {{ product.price | money }}
                       {% else %}
                     <span>{{ product.price | money }}</span>
 
