--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -119,7 +119,7 @@ fernandoepeso.info
           {% endfor %}
         </div>
       </div>
-      <div class="link-about"><a href="/about">About</a></div>
+      <div class="link-about"><a href="../pages/about">About</a></div>
 
             <!-- {% for link in linklists.main-menu.links %}
             <li {% if link.active %}class="active"{% endif %}><a class="{{ link.title }}" href="{{ link.url }}">{{ link.title }}</a></li>
