--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -77,9 +77,9 @@
             </div>
           </div>
           <div class="nav-info">
-            <div id="desccription" class="hov show-description">Description</div>
-            <div id="size" class="hov show-description">Size</div>
-            <div id="condition" class="hov show-description">Condition</div>
+            <div class="desccription hov show-description">Description</div>
+            <div class="size hov show-description">Size</div>
+            <div class="condition hov show-description">Condition</div>
             <div  id="desccription" class="size">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</div>
             <div  id="size" class="size">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</div>
             <div  id="condition" class="size">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s..</div>
