--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -77,13 +77,13 @@
             </div>
           </div>
           <div class="nav-info">
-            <div id="description" class="button">Description</div>
-            <div id="size" class="button">Size</div>
-            <div id="condition" class="button">Condition</div>
+            <div id="" class="button description">Description</div>
+            <div id="" class="button size">Size</div>
+            <div id="" class="button condition">Condition</div>
 
-            <div id="description" class="show-description description">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</div>
-            <div id="size" class="show-description size">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</div>
-            <div id="condition" class="show-description condition">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s..</div>
+            <div id="description" class="show-description">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</div>
+            <div id="size" class="show-description">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</div>
+            <div id="condition" class="show-description">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s..</div>
           </div>
           <div class="information">
               <div class="project_info">
