--- a/assets/style.css
+++ b/assets/style.css
@@ -562,7 +562,7 @@ span.box {
 }
 .sale {
   border:1px solid black;
-  margin-top: 12px;
+  margin-bottom: 12px;
   width: 100%;
   text-align: center;
   padding: 2px;
