--- a/assets/style.css
+++ b/assets/style.css
@@ -477,10 +477,15 @@ span.box {
   color:var(--white);
   padding:2px;
   position: absolute;
-  top: 50%;
-  transform: translate(0%,-50%);
   left: 0px;
-  background-color: var(--black);;
+  background-color: var(--red);;
+}
+.product-actions{
+  width: 100%;
+  grid-gap: 12px;
+  position: absolute;
+  display: grid;
+  grid-template-columns: repeat(4,1fr);
 }
 /* RANNDMON PAGE
 ================================================== */
