--- a/assets/style.css
+++ b/assets/style.css
@@ -478,7 +478,7 @@ span.box {
   padding:2px;
   position: absolute;
   left: 0px;
-  background-color: var(--red);;
+  background-color: var(--black);
 }
 .product-actions{
   width: 100%;
