--- a/assets/style.css
+++ b/assets/style.css
@@ -472,21 +472,7 @@ span.box {
   display: none;
   z-index: 0;
 }
-.sold-out{
-  z-index: 1;
-  color:var(--white);
-  padding:2px;
-  padding-left: 5px;
-  left: 0px;
-  background-color: var(--black);
-}
-#product-actions{
-  width: 100%;
-  grid-gap: 12px;
-  position: absolute;
-  display: grid;
-  grid-template-columns: repeat(4,1fr);
-}
+
 /* RANNDMON PAGE
 ================================================== */
 .icon-marchive svg{
@@ -565,7 +551,7 @@ span.box {
 .button.active{
   background-color: grey;
 }
-.sale {
+/* .sale {
   border:1px solid black;
   margin-bottom: 12px;
   width: 100%;
@@ -574,6 +560,21 @@ span.box {
   color: var(--white);
   background: var(--black);
   z-index: 100;
+} */
+.sold-out, .sale{
+  z-index: 1;
+  color:var(--white);
+  padding:2px;
+  padding-left: 5px;
+  left: 0px;
+  background-color: var(--black);
+}
+#product-actions{
+  width: 100%;
+  grid-gap: 12px;
+  position: absolute;
+  display: grid;
+  grid-template-columns: repeat(4,1fr);
 }
 .nav-info{
   border-left: 0.5px solid black;
