--- a/assets/style.css
+++ b/assets/style.css
@@ -553,11 +553,12 @@ span.box {
   color: var(--black);
 }
 #bag span.sale{
-    right: 5px!important;
-    position: absolute;
-    width: fit-content;
-    background-color: transparent;
-    padding-right: 5px;
+  right: 5px!important;
+  position: absolute;
+  width: fit-content;
+  background-color: transparent;
+  padding-right: 5px;
+  left: auto;
 }
 /* .sale {
   border:1px solid black;
