--- a/templates/page.about.liquid
+++ b/templates/page.about.liquid
@@ -2,3 +2,8 @@
     <div class="banner_main">
         {% section 'banner_about' %}
     </div>
+<style>
+  .switch{
+    display: none;
+  }
+</style>
