--- a/templates/page.liquid
+++ b/templates/page.liquid
@@ -7,3 +7,8 @@
       {{ page.content | replace: '_16x16', '' | replace: '_32x32', '' | replace: '_50x50', '' | replace: '_100x100', '' | replace: '_160x160', '' | replace: '_240x240', '' | replace: '_480x480', '' | replace: '_600x600', '' | replace: '_1024x1024', '' }}
     </div>
   </div>
+  <style>
+    .switch{
+      display: none;
+    }
+  </style>
