--- a/templates/page.about.liquid
+++ b/templates/page.about.liquid
@@ -3,7 +3,7 @@
         {% section 'banner_about' %}
     </div>
     <style>
-      .switch{
+      .switch-view{
         display: none;
       }
     </style>
