--- a/templates/page.about.liquid
+++ b/templates/page.about.liquid
@@ -10,4 +10,11 @@
   .switch-view{
     display: none;
   }
+  .page_content {
+    z-index: 1;
+    grid-column: span 9;
+    color: white;
+    font-size: 20px;
+    padding: 20px;
+}
 </style>
