--- a/templates/page.about.liquid
+++ b/templates/page.about.liquid
@@ -13,8 +13,17 @@
   .page_content {
     z-index: 1;
     grid-column: span 9;
-    color: white;
-    font-size: 20px;
     padding: 20px;
-}
+   }
+  .banner_main{
+    position: absolute;
+    top: 0;
+    opacity: 0.5;
+    height: var(--h);
+    width: 100%;
+  }
+  .banner_main img{
+    object-fit: cover;
+  }
+
 </style>
