--- a/templates/page.about.liquid
+++ b/templates/page.about.liquid
@@ -16,14 +16,17 @@
     padding: 20px;
    }
   .banner_main{
+    overflow: hidden;
     position: absolute;
     top: 0;
     opacity: 0.5;
     height: var(--h);
     width: 100%;
   }
-  .banner_main img{
-    object-fit: cover;
+  .banner_main img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
   }
 
 </style>
