--- a/snippets/product-body.liquid
+++ b/snippets/product-body.liquid
@@ -64,9 +64,9 @@
           <div class="main-information">
             <div class="info-product">
               <div>Designer</div>
-              <div class="hov">{% for collection in product.collections %}
-{{ collection.title }}
-{% endfor %}</div>
+              <div class="hov">
+          
+              </div>
             </div>
             <div class="info-product">
               <div>Era</div>
