--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -45,7 +45,7 @@
           <div class="main-information">
             <div class="info-product">
               <div>Designer</div>
-              <div class="hov">Alexander Wang</div>
+              <div class="hov"></div>
             </div>
             <div class="info-product">
               <div>Era</div>
