--- a/templates/page.about.liquid
+++ b/templates/page.about.liquid
@@ -28,5 +28,8 @@
       height: 100%;
       object-fit: cover;
   }
-
+  .link-about{
+    background-color: var(--black);
+    color: var(--white);
+  }
 </style>
