--- a/snippets/related.liquid
+++ b/snippets/related.liquid
@@ -1,5 +1,5 @@
 <div id="related">
-  <div class="">RELATED PRODUCTS<div>
+  <div class="">RELATED PRODUCTS</div>
   {%- assign current_product = product.id -%}
     {%- for product in collections.all.products -%}
       {%- if product.id != current_product and product.available -%}
