--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -1,5 +1,5 @@
 <div class="container-fixed">
-    <div class="swiper">
+    <div class="swiper-related">
       <div class="swiper-wrapper">
         {%- for product in collections.all.products -%}
           {%- if product.id != current_product and product.available -%}
