--- a/snippets/related.liquid
+++ b/snippets/related.liquid
@@ -1,6 +1,6 @@
 <div id="related">
   <div class="related-title">RELATED PRODUCTS</div>
-  <div class="swiper-related">
+  <div class="swiper related-swiper">
     <div class="swiper-wrapper">
   {%- assign current_product = product.id -%}
     {%- for product in collections.all.products -%}
