--- a/assets/style.css
+++ b/assets/style.css
@@ -574,7 +574,7 @@ span.box {
   display: -webkit-box;
   display: -ms-flexbox;
   display: -webkit-flex;
-  display: flex;
+  display: flex!important;
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   -webkit-justify-content: center;
