--- a/assets/style.css
+++ b/assets/style.css
@@ -546,14 +546,14 @@ span.box {
   height: fit-content;
 }
 
-.swiper {
+.swiper.home {
   top: 0px;
   position: absolute;
   width: 100vw;
   height: 100vh;
   padding: 20px!important;
 }
-.swiper.related-swiper {
+.swiper.relatedd {
   top: 0px;
   position: relative;
   width: 100%;
