--- a/assets/style.css
+++ b/assets/style.css
@@ -736,12 +736,15 @@ footer{
   grid-column:span 9;
 }
 .main_page{
-  height: fit-content;
   grid-gap:20px;
   padding:20px;
   display: grid;
   grid-template-columns: repeat(12,1fr);
   min-height: calc(100vh - var(--m));
+}
+
+.main_page>div{
+  height: fit-content;
 }
 
 /* ABOUT
