--- a/templates/page.liquid
+++ b/templates/page.liquid
@@ -1,4 +1,5 @@
 <!--Content-->
+<div class="main-page">
   <div class="main_page">
     <div class="page_title">
       {{ page.title }}
@@ -7,6 +8,7 @@
       {{ page.content | replace: '_16x16', '' | replace: '_32x32', '' | replace: '_50x50', '' | replace: '_100x100', '' | replace: '_160x160', '' | replace: '_240x240', '' | replace: '_480x480', '' | replace: '_600x600', '' | replace: '_1024x1024', '' }}
     </div>
   </div>
+</div>
 <style>
     .switch-view{
       display: none;
