--- a/templates/page.about.liquid
+++ b/templates/page.about.liquid
@@ -1,10 +1,12 @@
 <!--Content-->
-<div class="page_content">
-  {{ page.content | replace: '_16x16', '' | replace: '_32x32', '' | replace: '_50x50', '' | replace: '_100x100', '' | replace: '_160x160', '' | replace: '_240x240', '' | replace: '_480x480', '' | replace: '_600x600', '' | replace: '_1024x1024', '' }}
-</div>
-<div class="banner_main">
-  {% section 'banner_about' %}
-</div>
+<div class="main-page">
+  <div class="page_content">
+    {{ page.content | replace: '_16x16', '' | replace: '_32x32', '' | replace: '_50x50', '' | replace: '_100x100', '' | replace: '_160x160', '' | replace: '_240x240', '' | replace: '_480x480', '' | replace: '_600x600', '' | replace: '_1024x1024', '' }}
+  </div>
+  <div class="banner_main">
+    {% section 'banner_about' %}
+  </div>
+</div>  
 <style>
   .switch-view{
     display: none;
