--- a/snippets/product-body.liquid
+++ b/snippets/product-body.liquid
@@ -64,7 +64,7 @@
             <div class="info-product">
               <div>Designer</div>
               <div class="hov">
-
+                  yess
               </div>
             </div>
             <div class="info-product">
@@ -102,7 +102,6 @@
         </div>
       </div>
   </div>
-
 {%- if template contains 'product' or template contains 'collection' -%}
   {{ 'global-product.js' | asset_url | script_tag }}
 {%- endif -%}
