--- a/templates/collection.liquid
+++ b/templates/collection.liquid
@@ -1,5 +1,5 @@
 <div id="products">
   {% for product in collection.products %}
-		{% include 'product-body' %}
+		{% include 'product-body-new' %}
   {% endfor %}
 </div>
