--- a/snippets/product-body-new.liquid
+++ b/snippets/product-body-new.liquid
@@ -1,4 +1,4 @@
-<!--Product-new-->
+<!--product-body-new-->
 <div class="product">
     <a class="thumbnail" href="{{ product.url }}">
         <span class="box"></span>
@@ -24,9 +24,6 @@
                                  {% else %}
                                      <div class="sold-out">SOLD OUT</div>
                                  {% endif %}
-
-
-
         </form>
         {% for media in product.media %}
             {% case media.media_type %}
