--- a/snippets/new-product-body.liquid
+++ b/snippets/new-product-body.liquid
@@ -1,4 +1,4 @@
-<!--Product-->
+<!--New product body-->
 <div class="product">
     <a class="thumbnail" href="{{ product.url }}">
         <span class="box"></span>
