--- a/snippets/product-body.liquid
+++ b/snippets/product-body.liquid
@@ -64,7 +64,7 @@
             <div class="info-product">
               <div>Designer</div>
               <div class="hov">
-                  yess
+                bomba
               </div>
             </div>
             <div class="info-product">
