--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -45,11 +45,11 @@
           <div class="main-information">
             <div class="info-product">
               <div>Designer</div>
-              <div class="hov"></div>
+              <div>{{ product.metafields.custom.designer }}</div>
             </div>
             <div class="info-product">
               <div>Era</div>
-              <div>1820</div>
+              <div>{{ product.metafields.custom.era }}</div>
             </div>
             <div class="info-product">
               <div>Item</div>
