--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -75,13 +75,13 @@
             </div>
           </div>
           <div class="nav-info">
-            <div id="description" class="button">Description</div>
-            <div id="size" class="button">Size</div>
-            <div id="condition" class="button">Condition</div>
-
-            <div class="show-description description">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</div>
-            <div class="show-description size">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</div>
-            <div class="show-description condition">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s..</div>
+              <div id="description" class="button">Description</div>
+              <div id="size" class="button">Size</div>
+              <div id="condition" class="button">Condition</div>
+              
+              <div class="show-description description">{{ product.metafields.custom.description }}</div>
+              <div class="show-description size">{{ product.metafields.custom.size }}</div>
+              <div class="show-description condition">{{ product.metafields.custom.condition }}</div>
           </div>
           <span class="contact">Contact for more information to <a href="mailto:hello@marchive.info">hello@marchive.info</a></span>
     </div>
