--- a/snippets/product-body.liquid
+++ b/snippets/product-body.liquid
@@ -15,6 +15,7 @@
           {% if product.available %}
           {% else %}
             <div class="sold-out">SOLD OUT</div>
+            <div class="layer"></div>
           {% endif %}
     </form>
     {% for media in product.media %}
