--- a/assets/style.css
+++ b/assets/style.css
@@ -896,16 +896,17 @@ div#related {
 /* RESPONSIVE
 ================================================== */
 @media (max-width: 800px){
-  .nav-down{
-    margin-top: -50px;
-  }
-  .nav-up{
+.nav-down{
     margin-top: 0px;
+  }
+.nav-up{
+  margin-top: -50px;
   }
 header{
     z-index: 10!important;
   }
 .logo {
+    transition: 0.5s;
     grid-column: span 12;
 }
 .menu {
