--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -140,6 +140,7 @@ fernandoepeso.info
           </div>
         </div>
   	 </div>
+     <div class="link-about-mobile"><a href="../pages/about">About</a></div>
      <div class="switch-view hov">Switch view</div>
   </div>
   </header>
