--- a/assets/style.css
+++ b/assets/style.css
@@ -929,7 +929,7 @@ header{
   grid-column: span 6;
 }
 .switch-view {
-  grid-column: 9/span 4;
+  grid-column: span 3;
 }
 .drop {
   column-gap: 12px;
