--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -83,7 +83,7 @@
             {%- if product.metafields.custom.size != blank -%}<div class="show-description size">{{ product.metafields.custom.size }}</div>{%- endif -%}
             {%- if product.metafields.custom.condition != blank -%}<div class="show-description condition">{{ product.metafields.custom.condition }}</div>{%- endif -%}
           </div>
-          <span class="contact">For more information contact to <a href="mailto:hello@marchive.info">hello@marchive.info</a></span>
+          <div class="contact">For more information contact to <a href="mailto:hello@marchive.info">hello@marchive.info</a></div>
     </div>
     <div class="gallery">
           {% for media in product.media %}
